# i3im

./: Cargo.toml  LICENSE  README.md  README.org  README.ru.md  README.ru.org
etc/: config.example.yaml
src/: commands.rs  config.rs  last_workspaces.rs  listener.rs  main.rs  state.rs  workspace_group.rs
src/event_processor/: config.rs  processor.rs
