[package]
authors = ["Evgenii Lepikhin <e.lepihin@postgrespro.ru>"]
edition = "2021"
name = "i3im"
version = "0.1.0"
rust-version = "1.65"
license = "MIT"
description = "The utility extends the standard functionality of the i3 and Sway window managers."
repository = "https://github.com/johnlepikhin/i3im"
readme = "README.org"

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
i3ipc = { git = "https://github.com/johnlepikhin/i3ipc-rs", version = "0.11.1", features = ["i3-4-14"] }
regex = "1.11.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_regex = "1.1.0"
serde_yaml = "0.9"
shellexpand = "3.1.0"
slog = "2.7"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-stdlog = "4.1.1"
slog-syslog = { git = "https://github.com/johnlepikhin/syslog", branch = "fix/loglevel-compare" }
slog-term = "2.9.1"
structdoc = "0.1.4"
