[package]
authors = ["Evgenii Lepikhin <e.lepihin@postgrespro.ru>"]
edition = "2021"
name = "i3im"
version = "0.1.0"
rust-version = "1.65"
license = "MIT"
description = "The utility extends the standard functionality of the i3 and Sway window managers."
repository = "https://github.com/johnlepikhin/i3im"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
i3ipc-jl = { version = "0.11.2", features = ["i3-4-14"] }
regex = "1.11.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_regex = "1.1.0"
serde_yaml = "0.9"
shellexpand = "3.1.0"
slog = "2.7"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-stdlog = "4.1.1"
slog-syslog-jl = "0.13.1"
slog-term = "2.9.1"
structdoc = "0.1.4"
